bin_PROGRAMS = fluxy

fluxy_SOURCES = \
	fluxy.cc \
	fluxy.hh \
	log.cc \
	log.hh \
	stringutils.cc \
	stringutils.hh \
	events.cc \
	events.hh \
	ghash++.cc \
	ghash++_instances.cc \
	ghash++.hh \
	server.cc \
	server.hh \
	udp.cc \
	udp.hh \
	stats.cc \
	stats.hh \
	addstats.cc \
	addstats.hh \
	result.cc \
	result.hh \
	words_parser.cc \
	words_parser.hh \
	user.cc \
	user.hh \
	users.cc \
	users.hh \
	pthread++.cc \
	pthread++.hh \
	client_thread.cc \
	client_thread.hh \
	threads.cc \
	threads.hh \
	fetcher.cc \
	fetcher.hh \
	top.cc \
	top.hh \
	autodump.cc \
	autodump.hh \
	autocleanup.cc \
	autocleanup.hh \
	recycler.cc \
	recycler.hh \
	replicator.cc \
	replicator.hh \
	autoid.cc \
	autoid.hh \
	scale.cc \
	scale.hh \
	buffer.cc \
	buffer.hh \
	messages.cc \
	messages.hh \
	followers.cc \
	followers.hh \
	help.hh
	

AM_CXXFLAGS = @GLIB_CFLAGS@
fluxy_LDADD = @GLIB_LIBS@
